<resources>
    <string name="app_name">Penny Drop</string>
    <string name="players">Players</string>
    <string name="game">Game</string>
    <string name="player_name">Player Name</string>
    <string name="roll">Roll</string>
    <string name="or">OR</string>
    <string name="pass">Pass</string>
    <string name="cur_player">Current Player</string>
    <string name="coin_icon">Coin Icon</string>
    <string name="coins_left">coin(s) left</string>
    <string name="play_button">Play Button</string>
    <string name="rankings">Rankings</string>
    <string name="player_type_image">Player Type Image</string>
    <string name="games_played">Games Played</string>
    <string name="settings">Settings</string>
    <string name="more_options">More options</string>
    <string name="category_game_settings">Game Settings</string>
    <string name="category_theme_settings">Theme Settings</string>
    <string name="category_about">About the App</string>
    <string name="starting_penny_count_new_game">This only takes effect on a new game.</string>
    <string name="starting_penny_count">Starting penny count</string>
    <string name="fast_ai_summary">Fast AI summary</string>
    <string name="fast_ai">Fast AI</string>
    <string name="theme_mode">Theme Mode (Light/Dark)</string>
    <string name="penny_drop_created_by">The <![CDATA[<i>Penny Drop</i>]]> app was initially created by Michael Fazio for the Pragmatic Bookshelf title <![CDATA[<a href="https://pragprog.com/titles/mfjetpack/">"Kotlin and Android Development featuring Jetpack"</a>]]>.</string>
    <string name="penny_drop_description">Start <![CDATA[<b>building</b>]]> modern, high-quality Android apps by working through two projects (including Penny Drop!) that use Kotlin and the Jetpack suite of libraries, tools, and practices.</string>
    <string name="penny_drop_icons">The <![CDATA[<a href="https://materialdesignicons.com/icon/currency-usd-circle-outline">coin</a>]]> and <![CDATA[<a href="https://materialdesignicons.com/icon/dice-6">six-sided die</a>]]> icons are from the <![CDATA[<a href="https://materialdesignicons.com">Material Design Icons</a>]]> collection.</string>
    <string name="dice_icon">Dice Icon</string>
    <string name="about_app_summary">Overview, dev info, and icon attribution</string>
    <string name="about_penny_drop">About Penny Drop</string>
    <string name="penny_drop">Penny Drop</string>
    <string name="pick_players">Pick Players</string>
    <string name="player_off">Off</string>
    <string name="player_human">Human</string>
    <string name="player_ai">AI</string>
    <string name="no_game_title">No active game</string>
    <string name="no_game_hint">Pick your players to start a new round.</string>
    <string name="no_rankings_title">No games played yet</string>
    <string name="no_rankings_hint">Finish a game to see standings here.</string>
    <string name="player_default_name">Player %1$d</string>
    <string name="current_standings">Current Standings:</string>
    <string name="final_scores">Final Scores:</string>
    <string name="game_over">Game Over!</string>
    <string name="game_started">The game has begun!\n</string>
    <string name="game_winner">%1$s is the winner!</string>
    <string name="turn_rolled">%1$s rolled a %2$d.\n</string>
    <string name="turn_passed">%1$s passed.  They currently have %2$s.\n</string>
    <string name="turn_busted">%1$s rolled a %2$d.  They collected %3$s for a total of %4$s.\n</string>
    <string name="standings_row">\t%1$s - %2$s</string>
</resources>
