<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/rankingsFragment">

    <fragment
        android:id="@+id/PickPlayersFragment"
        android:name="dev.lamm.pennydrop.fragments.PickPlayersFragment"
        android:label="@string/pick_players" />

    <fragment
        android:id="@+id/gameFragment"
        android:name="dev.lamm.pennydrop.fragments.GameFragment"
        android:label="@string/game" />

    <fragment
        android:id="@+id/rankingsFragment"
        android:name="dev.lamm.pennydrop.fragments.RankingsFragment"
        android:label="@string/rankings" />

    <fragment
        android:id="@+id/settings_fragment"
        android:name="dev.lamm.pennydrop.fragments.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="dev.lamm.pennydrop.fragments.AboutFragment"
        android:label="@string/about_penny_drop" />
</navigation>